# exoquery

./: README.md  exoquery.py  pyproject.toml  query.py
app/: main.py  prompt.py  query.py
app/assets/: nexsci_ps_columns.csv  nexsci_ps_columns.db  nexsci_ps_columns.faiss  ps-description-page.html  scrape-ps-description-page.py  telescopes
app/assets/prompts/: generate_astroquery.prompt.j2  generate_query_summary.prompt.j2
app/embed/: planetary_systems_columns_embedding.py
embed/: planetary_systems_columns_embedding.py
tests/: generate_astroquery.prompt.j2  generate_column_query.prompt.j2  run.py  test_queries_1.txt  test_queries_1_results.json  testrun.txt
