[project]
name = "exoquery"
version = "0.1.0"
description = "Query the NExSci's NASA Exoplanet Archive using natural language"
authors = [
    {name = "Sean Rapp"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "astroquery (>=0.4.10,<0.5.0)",
    "faiss-cpu (>=1.11.0.post1,<2.0.0)",
    "sentence-transformers (>=5.0.0,<6.0.0)",
    "accelerate (>=1.9.0,<2.0.0)",
    "torch (>=2.7.1,<3.0.0)",
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
